--- a/src/App.css
+++ b/src/App.css
@@ -32,46 +32,41 @@ body {
 
 h1 {
     font-weight: 500;
+    font-size: 1.5rem;
+    margin-bottom: .7em;
 
 
 }
 
 p {
     font-weight: 400;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     color: red;
+    font-size: .9rem;
 }
 
 
 .main {
     width: 100%;
-    max-width: 300px;
-    border: 1px solid black;
+    max-width: 350px;
+    border: 10px solid black;
+    background: linear-gradient(to top, rgba(#cffffe, 0.3), rgba(#f9f7d9, 0.3), rgba(#fce2ce, 0.3), rgba(#ffc1f3, 0.3));
+  border-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E %3ClinearGradient id='g' x1='0%25' y1='0%25' x2='0%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23cffffe' /%3E%3Cstop offset='25%25' stop-color='%23f9f7d9' /%3E%3Cstop offset='50%25' stop-color='%23fce2ce' /%3E%3Cstop offset='100%25' stop-color='%23ffc1f3' /%3E%3C/linearGradient%3E %3Cpath d='M1.5 1.5 l97 0l0 97l-97 0 l0 -97' stroke-linecap='square' stroke='url(%23g)' stroke-width='3'/%3E %3C/svg%3E") 1;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1em;
 }
 
-@media (min-width: 300px) {
-
-    h1 {
-        font-size: 1.5rem;
-    }
-    p {
-        font-size: 1rem;
-    }
-
-    
-}
-
 .joke {
-    padding: 40px;
+    margin: 2em;
+    padding: 10px;
+    border: 1px solid green;
 }
 
 button {
-    font-weight: 300;
-    padding: 15px 25px;
+    padding: 15px 20px;
     border-radius: 9px;
     font-size: 1rem;
     margin-bottom: 2em;
@@ -81,15 +76,38 @@ button {
 .btn--joke {
     border: none;
     cursor: pointer;
-    text-transform: uppercase;
-    background-color: black;
-    color: white;
+    
+    color: black;
     transition: color 1s;
+    font-weight: 700;
    
 }
 
 .btn--joke:hover {
     border: 1px solid red;
-
-
+    color: black;
+    background-color: purple;
 }
+
+@media (min-width: 370px) {
+    .main {
+       flex-direction: column;
+    }
+    h1 {
+        
+    }
+    p {
+        
+    }
+
+    .joke {
+        
+    }
+
+    
+}
+
+
+
+
+
