--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 
 * {
     box-sizing: border-box;
-
 }
 
 html,
@@ -18,24 +17,18 @@ p {
     padding: 0;
 }
 
-
 body {
-
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     line-height: 1.5;
-
-
 }
 
 h1 {
     font-weight: 500;
     font-size: 1.5rem;
     margin-bottom: .7em;
-
-
 }
 
 p {
@@ -45,14 +38,9 @@ p {
     font-size: .9rem;
 }
 
-
 .main {
     width: 100%;
-    max-width: 350px;
-    border: 10px solid black;
-    background: linear-gradient(to top, rgba(#cffffe, 0.3), rgba(#f9f7d9, 0.3), rgba(#fce2ce, 0.3), rgba(#ffc1f3, 0.3));
-  border-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E %3ClinearGradient id='g' x1='0%25' y1='0%25' x2='0%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23cffffe' /%3E%3Cstop offset='25%25' stop-color='%23f9f7d9' /%3E%3Cstop offset='50%25' stop-color='%23fce2ce' /%3E%3Cstop offset='100%25' stop-color='%23ffc1f3' /%3E%3C/linearGradient%3E %3Cpath d='M1.5 1.5 l97 0l0 97l-97 0 l0 -97' stroke-linecap='square' stroke='url(%23g)' stroke-width='3'/%3E %3C/svg%3E") 1;
-
+    max-width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,7 +50,7 @@ p {
 .joke {
     margin: 2em;
     padding: 10px;
-    border: 1px solid green;
+
 }
 
 button {
@@ -76,34 +64,26 @@ button {
 .btn--joke {
     border: none;
     cursor: pointer;
-    
+
     color: black;
     transition: color 1s;
     font-weight: 700;
-   
+
 }
 
 .btn--joke:hover {
-    border: 1px solid red;
+
     color: white;
-    background-color: purple;
+    background-color: black;
+
 }
 
 @media (min-width: 600px) {
-
-
     .main {
-       flex-direction: column;
-       justify-content: space-around;
-       align-items: center;
-       
-       min-width: 600px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        min-width: 600px;
     }
-
-    
 }
-
-
-
-
-
